--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mijn Website</title>
+  <title>Informatie over mijzelf</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Mijn favoriete kleur is pimpel paars
+  
+
+  <header>
+  
+</header>
+
+<nav>
+
+</nav>
+<main>
+
+</main>
+<footer>
+
+</footer>
 </body>
 
 </html>
