de namen van de bestandjes veranderd

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <a href=‘index.html’> 11111 </a>
 </li>
 <li>
-<a href=‘pagina2.html’> 22222 </a>
+<a href=‘sport.html’> 22222 </a>
 </li>
 <li>
-<a href=‘pagina3.html’> 33333 </a>
+<a href=‘baan’> 33333 </a>
 </li>
 </ul>
 </nav>
