BG van de h1's toegevoegd+ een paar H1/h2/h3's toegevoegd

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
 
   <header>
-  <h1>Dit ben ik</h1>
+  <h1>Das bin ich</h1>
 </header>
 
 <nav>
@@ -33,10 +33,16 @@
 </nav>
 </nav>
 <main>
+  <h1>H1</h1>
+<h2>H2 </h2>
+<h3> H3</h3>
+<h4>H4</h4>
 
+<p>P</p>
 </main>
 <footer>
 <h3>Footer</h3>
+
 </footer>
 </body>
 
