wat bg toegevoegd + de bg en heads veranderd per main header nav enz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
 
   <header>
-  <h1>Das bin ich</h1>
+  <h1>Mijzelf</h1>
 </header>
 
 <nav>
@@ -33,6 +33,7 @@
 </nav>
 </nav>
 <main>
+
   <h1>H1</h1>
 <h2>H2 </h2>
 <h3> H3</h3>
@@ -41,7 +42,7 @@
 <p>P</p>
 </main>
 <footer>
-<h3>Footer</h3>
+<h3> Gemaakt als opdracht voor informatica</h3>
 
 </footer>
 </body>
