--- a/index.html
+++ b/index.html
@@ -14,35 +14,36 @@
   
 
   <header>
-  <h1>Mijzelf</h1>
+  <h1>Info over mij</h1>
 </header>
 
 <nav>
 <nav>
 <ul>
 <li>
-<a href=‘index.html’> 11111 </a>
+<a href='index.html'> 11111 </a>
 </li>
 <li>
-<a href=‘sport.html’> 22222 </a>
+<a href='sport.html'> 22222 </a>
 </li>
 <li>
-<a href=‘baan’> 33333 </a>
+<a href='baan.html'> 33333 </a>
 </li>
 </ul>
 </nav>
 </nav>
 <main>
 
-  <h1>H1</h1>
-<h2>H2 </h2>
-<h3> H3</h3>
-<h4>H4</h4>
+<h1>H!</h1>
+<h2>H@ </h2>
+<h3> H#</h3>
+<h4>H$</h4>
 
 <p>P</p>
 </main>
 <footer>
 <h3> Gemaakt als opdracht voor informatica</h3>
+
 
 </footer>
 </body>
