Inleiding van de index ingevuld

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
 <nav>
 <ul>
 <li>
-<a href='index.html'> 11111 </a>
+<a href='index.html'> Inleiding </a>
 </li>
 <li>
-<a href='sport.html'> 22222 </a>
+<a href='sport.html'> sport </a>
 </li>
 <li>
-<a href='baan.html'> 33333 </a>
+<a href='baan.html'> Baan </a>
 </li>
 </ul>
 </nav>
 </nav>
 <main>
 
-<h1>H!</h1>
-<h2>H@ </h2>
-<h3> H#</h3>
-<h4>H$</h4>
-
-<p>P</p>
+<h1>Inleiding over mezelf</h1>
+<p>Ik ben Guido 14 jaar oud en woon met mijn ouders en 1 broertje en groe broertje in een mooi huis in Naaldwijk.
+  In mijn vrije tijd doe ik graag helemaal niks zoals: op mijn bed liggen en een serie kijken op netflix. Elke
+  maandag, dinsdag, donderdag en zaterdag doe ik aan mijn sport en daar krijg je later meer over te horen.
+</p>
+<p>plaatje:</p>
 </main>
 <footer>
 <h3> Gemaakt als opdracht voor informatica</h3>
