wat text toegevoegd

--- a/baan.html
+++ b/baan.html
@@ -14,26 +14,26 @@
   
 
   <header>
-  <h1>kees</h1>
+  <h1>Baan</h1>
 </header>
 
 <nav>
 <nav>
 <ul>
 <li>
-<a href='index.html'> 11111 </a>
+<a href='index.html'> Inleiding </a>
 </li>
 <li>
-<a href='sport.html'> 22222 </a>
+<a href='sport.html'> Sport </a>
 </li>
 <li>
-<a href='baan.html'> 33333 </a>
+<a href='baan.html'> Baan </a>
 </li>
 </ul>
 </nav>
 </nav>
 <main>
-
+<h1>Wat zou ik later willen doen?</h1>
 </main>
 <footer>
 <h3>Footer</h3>
