--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <a href='index.html'> Inleiding </a>
 </li>
 <li>
-<a href='sport.html'> sport </a>
+<a href='sport.html'> Sport </a>
 </li>
 <li>
 <a href='baan.html'> Baan </a>
