gekeken hoe ik een image toevoeg

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
   In mijn vrije tijd doe ik graag helemaal niks zoals: op mijn bed liggen en een serie kijken op netflix. Elke
   maandag, dinsdag, donderdag en zaterdag doe ik aan mijn sport en daar krijg je later meer over te horen.
 </p>
-<p>plaatje:</p>
+
+<img src="Kleur palet website PO.png" width="1110" alt="kleur pallet">
+<img src="Kleur palet website PO.png" width="1110" alt="kleur pallet"
 </main>
 <footer>
 <h3> Gemaakt als opdracht voor informatica</h3>
