--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   maandag, dinsdag, donderdag en zaterdag doe ik aan mijn sport en daar krijg je later meer over te horen.
 </p>
 
-<img src="Kleur palet website PO.png" width="1110" alt="kleur pallet">
-<img src="Kleur palet website PO.png" width="1110" alt="kleur pallet"
+<img src="2169 (2).jpg" width="100" alt="kleur pallet">
+<img src="2175 (2).jpg" width="100" alt="kleur pallet"
 </main>
 <footer>
 <h3> Gemaakt als opdracht voor informatica</h3>
