Heel veel inhoud toegevoegd

--- a/baan.html
+++ b/baan.html
@@ -33,10 +33,46 @@
 </nav>
 </nav>
 <main>
-<h1>Wat zou ik later willen doen?</h1>
+<h1>Lijst met wat ik allemaal wil/wou worden</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Welke baan ik wil doen</th>
+      <th>Waarom ik het wou doen</th>
+      <th>Wanneer ik het wou doen</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Uitvinder</td>
+      <td>Het leuk mij heel leuk om nieuwe dingen te maken met technologie</td>
+      <td>Toen ik 6 was tot 12 jaar</td>
+    </tr>
+    <tr>
+      <td>Piloot Defensie</td>
+      <td>Vliegen lijkt mij echt gaaf en dan super snel met raketten</td>
+      <td>Twijfel ik nog over</td>
+    </tr>
+    <tr>
+      <td>Piloot KLM</td>
+      <td>Vliegen lijkt mij echt gaaf en dan met een mega vliegtuig</td>
+      <td>Twijfel ik nog over</td>
+    </tr>
+    <tr>
+      <td>Technologie repareren</td>
+      <td> Ik vind technologie leuk en ik snap het (meestal)</td>
+      <td>Lijkt me ooit wel is leuk</td>
+    </tr>
+    <tr>
+      <td>Engineer technologie/vliegtuigen</td>
+      <td>Ik vind vliegtuigen al leuk en dan ze nog bouwen</td>
+      <td>Lijkt me wel leuk als idee 1 niet werkt</td>
+    </tr>
+  </tbody>
+</table>
 </main>
 <footer>
-<h3>Footer</h3>
+<h3>Pagina over welke baan ik zou of willen doen. Gemaakt als opdracht voor informatica</h3>
 </footer>
 </body>
 
