--- a/sport.html
+++ b/sport.html
@@ -34,9 +34,15 @@
 </nav>
 <main>
 <h1>Welke sporten doe ik/deed ik</h1>
+<p>Ik begon echt met sporten toen ik rond 6 jaar oud was. Toen begon ik met atletiek, hierbij heb ik vele verschillende prijzen gewonnen bij werpen of sprinten/rennen. Uiteindelijk vond ik dit niet leuk genoeg, want ik moest heel veel verschillende onderdelen doen en dat vond ik te vervelend. 
+  Nadat ik van atletiek vanaf ben gegaan ging ik op freerunnen, want ik hoorde van een vriend dat freerunnen leuk is. Freerunnen is een sport waarbij je eigenlijk parcourt en dan met verschillende trucjes zoals een flip of een vault. Dit vond ik heel leuk en het ging harstieke goed totdat een hoop ouders gaven dat er niet genoeg veiligheid is, hierdoor is de freerun trainer er mee gestopt en moest ik opzoek naar een andere vereniging of sport. Toen kwam ik op het idee ik wil gaan voetballen. Dat vonden mijn ouders eindelijk oke en ging ik voetballen. Ik doe nu nogsteeds aan voetbal en vind het heel erg leuk. </p>
+<p>Hier ziet u een foto van mijn medailles die ik heb gewonnen bij atletiek:</p>
+<img src="2508.jpg" width="1000" alt="Foto medailles atletiek">
+<h2> Welke sport zou ik een keer willen doen?</h2>
+<p>Als ik nog één keer van sport zou moeten wisselen zou ik schermen, want het is uniek je hoort het bijna tot niet, het lijkt me heel gaaf en ik denk dat ik hier heel goed in ga zijn. Een leuk feitje maar ik ken een wereldkampioen speler van schermen. Ze heet Sonja Tol en was een hele goede schermer. Zij heeft ook heel veel prijzen gewonnen.</p>
 </main>
 <footer>
-<h3>Footer</h3>
+<h3>Pagina over welke sporten ik heb gedaan en wat ik doe</h3>
 </footer>
 </body>
 
