--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
   maandag, dinsdag, donderdag en zaterdag doe ik aan mijn sport en daar krijg je later meer over te horen.
 </p>
 
-<img src="2169 (2).jpg" width="100" alt="kleur pallet">
-<img src="2175 (2).jpg" width="100" alt="kleur pallet"
+<img src="2169 (2).jpg" width="600" alt="Ik met een wapen in mijn hand">
+<img src="2175 (2).jpg" width="600" alt="Ik in een brandweer wagen"
 </main>
 <footer>
-<h3> Gemaakt als opdracht voor informatica</h3>
+<h3> Inleiding over mijzelf. Gemaakt als opdracht voor informatica</h3>
 
 
 </footer>
