List toegevoegd plaatje klm

--- a/baan.html
+++ b/baan.html
@@ -68,8 +68,10 @@
       <td>Ik vind vliegtuigen al leuk en dan ze nog bouwen</td>
       <td>Lijkt me wel leuk als idee 1 niet werkt</td>
     </tr>
+
   </tbody>
 </table>
+<img src="foto vliegtuig klm.webp" alt="vliegtuig klm"
 </main>
 <footer>
 <h3>Pagina over welke baan ik zou of willen doen. Gemaakt als opdracht voor informatica</h3>
