--- a/sport.html
+++ b/sport.html
@@ -39,7 +39,15 @@
 <p>Hier ziet u een foto van mijn medailles die ik heb gewonnen bij atletiek:</p>
 <img src="2508.jpg" width="1000" alt="Foto medailles atletiek">
 <h2> Welke sport zou ik een keer willen doen?</h2>
-<p>Als ik nog één keer van sport zou moeten wisselen zou ik schermen, want het is uniek je hoort het bijna tot niet, het lijkt me heel gaaf en ik denk dat ik hier heel goed in ga zijn. Een leuk feitje maar ik ken een wereldkampioen speler van schermen. Ze heet Sonja Tol en was een hele goede schermer. Zij heeft ook heel veel prijzen gewonnen.</p>
+<ul>
+<li>Schermen</li>
+<li>Boulderen</li>
+<li>Atletiek (opnieuw)</li>
+<li>Elektrisch Gitaar</li>
+<li>Bowlen</li>
+
+
+</ul>
 </main>
 <footer>
 <h3>Pagina over welke sporten ik heb gedaan en wat ik doe</h3>
